﻿Actual Version
**************

-- Version 1.1.0 --------------
	• Removed adding language files twice
	• Implemented check for permissions


###########################################################################
Past Versions
*************

-- Version 1.0.0 --------------
	• First implementation for 3.1
	• Included check for requirements