@@ -7,6 +7,7 @@ services:
             - @path_helper
             - @template
             - @user
+            - @request
         tags:
             - { name: event.listener }
     wolfsblvt.onlinetime.onlinetime:
