@@ -40,4 +40,6 @@ $lang = array_merge($lang, array(
 	'ONLINETIME_TOTAL'					=> 'Time spent online',
 	'ONLINETIME_AVERAGE'				=> 'Average of %s per day',
 	'ONLINETIME_CANT_SEE'				=> 'You cannot see this users online time.',
+
+	'ONLINETIME_USER_HIDE'				=> 'Hide my online time on profile',
 ));
