@@ -1,0 +1,7 @@
+<dl>
+	<dt><label for="wolfsblvt_onlinetime_hide">{L_ONLINETIME_USER_HIDE}{L_COLON}</label><!-- IF L_ONLINETIME_USER_HIDE_EXPLAIN --><br /><span>{L_ONLINETIME_USER_HIDE_EXPLAIN}</span><!-- ENDIF --></dt>
+	<dd>
+		<label for="wolfsblvt_onlinetime_hide"><input type="radio" name="wolfsblvt_onlinetime_hide" id="wolfsblvt_onlinetime_hide1" value="1"<!-- IF S_ONLINETIME_USER_HIDE --> checked="checked"<!-- ENDIF --> /> {L_YES}</label>
+		<label for="wolfsblvt_onlinetime_hide"><input type="radio" name="wolfsblvt_onlinetime_hide" id="wolfsblvt_onlinetime_hide0" value="0"<!-- IF not S_ONLINETIME_USER_HIDE --> checked="checked"<!-- ENDIF --> /> {L_NO}</label>
+	</dd>
+</dl>
