@@ -4,6 +4,7 @@
 -- Version 1.1.0 --------------
 	• Removed adding language files twice
 	• Implemented check for permissions
+	• Fix: Adding time to the next day if close after midnight
 
 
 ###########################################################################
